// Vitest Snapshot v1

exports[`PasswordReset > matches snapshot in en 1`] = `
<div
  class="page auth password-reset"
>
  <h1>
    Enter your new password. 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  
  
  
  <form
    novalidate=""
  >
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Enter password
      </label>
      
      <input
        class=""
        name="password"
        tabindex="0"
        type="password"
      />
      <svg
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 5.27L3.28 4L20 20.72L18.73 22l-3.08-3.08c-1.15.38-2.37.58-3.65.58c-5 0-9.27-3.11-11-7.5c.69-1.76 1.79-3.31 3.19-4.54L2 5.27M12 9a3 3 0 0 1 3 3a3 3 0 0 1-.17 1L11 9.17A3 3 0 0 1 12 9m0-4.5c5 0 9.27 3.11 11 7.5a11.79 11.79 0 0 1-4 5.19l-1.42-1.43A9.862 9.862 0 0 0 20.82 12A9.821 9.821 0 0 0 12 6.5c-1.09 0-2.16.18-3.16.5L7.3 5.47c1.44-.62 3.03-.97 4.7-.97M3.18 12A9.821 9.821 0 0 0 12 17.5c.69 0 1.37-.07 2-.21L11.72 15A3.064 3.064 0 0 1 9 12.28L5.6 8.87c-.99.85-1.82 1.91-2.42 3.13Z"
          fill="currentColor"
        />
      </svg>
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Re-enter password
      </label>
      
      <input
        class=""
        name="confirmation"
        tabindex="0"
        type="password"
      />
      <svg
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 5.27L3.28 4L20 20.72L18.73 22l-3.08-3.08c-1.15.38-2.37.58-3.65.58c-5 0-9.27-3.11-11-7.5c.69-1.76 1.79-3.31 3.19-4.54L2 5.27M12 9a3 3 0 0 1 3 3a3 3 0 0 1-.17 1L11 9.17A3 3 0 0 1 12 9m0-4.5c5 0 9.27 3.11 11 7.5a11.79 11.79 0 0 1-4 5.19l-1.42-1.43A9.862 9.862 0 0 0 20.82 12A9.821 9.821 0 0 0 12 6.5c-1.09 0-2.16.18-3.16.5L7.3 5.47c1.44-.62 3.03-.97 4.7-.97M3.18 12A9.821 9.821 0 0 0 12 17.5c.69 0 1.37-.07 2-.21L11.72 15A3.064 3.064 0 0 1 9 12.28L5.6 8.87c-.99.85-1.82 1.91-2.42 3.13Z"
          fill="currentColor"
        />
      </svg>
      <!---->
      
    </div>
    <div
      class="submit"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Change Password
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  
</div>
`;

exports[`PasswordReset > matches snapshot in fr 1`] = `
<div
  class="page auth password-reset"
>
  <h1>
    Réinitialisation de votre mot de passe 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  
  
  
  <form
    novalidate=""
  >
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Nouveau mot de passe
      </label>
      
      <input
        class=""
        name="password"
        tabindex="0"
        type="password"
      />
      <svg
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 5.27L3.28 4L20 20.72L18.73 22l-3.08-3.08c-1.15.38-2.37.58-3.65.58c-5 0-9.27-3.11-11-7.5c.69-1.76 1.79-3.31 3.19-4.54L2 5.27M12 9a3 3 0 0 1 3 3a3 3 0 0 1-.17 1L11 9.17A3 3 0 0 1 12 9m0-4.5c5 0 9.27 3.11 11 7.5a11.79 11.79 0 0 1-4 5.19l-1.42-1.43A9.862 9.862 0 0 0 20.82 12A9.821 9.821 0 0 0 12 6.5c-1.09 0-2.16.18-3.16.5L7.3 5.47c1.44-.62 3.03-.97 4.7-.97M3.18 12A9.821 9.821 0 0 0 12 17.5c.69 0 1.37-.07 2-.21L11.72 15A3.064 3.064 0 0 1 9 12.28L5.6 8.87c-.99.85-1.82 1.91-2.42 3.13Z"
          fill="currentColor"
        />
      </svg>
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Confirmation de votre nouveau mot de passe
      </label>
      
      <input
        class=""
        name="confirmation"
        tabindex="0"
        type="password"
      />
      <svg
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 5.27L3.28 4L20 20.72L18.73 22l-3.08-3.08c-1.15.38-2.37.58-3.65.58c-5 0-9.27-3.11-11-7.5c.69-1.76 1.79-3.31 3.19-4.54L2 5.27M12 9a3 3 0 0 1 3 3a3 3 0 0 1-.17 1L11 9.17A3 3 0 0 1 12 9m0-4.5c5 0 9.27 3.11 11 7.5a11.79 11.79 0 0 1-4 5.19l-1.42-1.43A9.862 9.862 0 0 0 20.82 12A9.821 9.821 0 0 0 12 6.5c-1.09 0-2.16.18-3.16.5L7.3 5.47c1.44-.62 3.03-.97 4.7-.97M3.18 12A9.821 9.821 0 0 0 12 17.5c.69 0 1.37-.07 2-.21L11.72 15A3.064 3.064 0 0 1 9 12.28L5.6 8.87c-.99.85-1.82 1.91-2.42 3.13Z"
          fill="currentColor"
        />
      </svg>
      <!---->
      
    </div>
    <div
      class="submit"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Modifier votre mot de passe
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  
</div>
`;
